decoder: handle variable widths for irregular encodings